--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     buildTypes {
         debug {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField 'String', 'NEWS_API_BASE_URL', "\"https://newsapi.org/v2/top-headlines\""
+            buildConfigField 'String', 'NEWS_API_BASE_URL', "\"https://newsapi.org/\""
             buildConfigField 'String', 'NEWS_API_KEY', "\"f71af7261c434b5d8be60816ed910d8b\""
             buildConfigField 'String', 'NEWS_LANGUAGE', "\"en\""
         }
