--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,15 +29,24 @@ android {
             minifyEnabled false
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     buildFeatures {
         viewBinding true
+    }
+
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
     }
 }
 
@@ -52,6 +61,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'com.android.databinding:viewbinding:7.1.2'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
+    testImplementation 'io.kotest:kotest-runner-junit5-jvm'
 
     // ViewModel
     def archLifecycleVersion = '2.4.1'
@@ -89,4 +99,10 @@ dependencies {
     testImplementation "io.mockk:mockk:1.9.3"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test:rules:1.4.0'
+    testImplementation "io.mockk:mockk:1.12.3"
+    def kotest_version = "4.4.1"
+    testImplementation "io.kotest:kotest-runner-junit5-jvm:$kotest_version"
+    testImplementation "io.kotest:kotest-assertions-core-jvm:$kotest_version"
+    testImplementation "io.kotest:kotest-runner-console-jvm:4.1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
 }
